Changed LICENSE.md
Signed-off-by: Jake Palanca <jakepalanca@protonmail.com>